--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,16 @@
 {
-  "presets": ["next/babel", "@babel/preset-react"],
+  "presets": [
+    "next/babel",
+    "@babel/preset-react"
+  ],
+  "babel-plugin-transform-typescript-metadata",
+  [
+    "@babel/plugin-proposal-decorators",
+    {
+      "legacy": true
+    }
+  ],
+  "babel-plugin-parameter-decorator",
   "plugins": [
     [
       "import",
