--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "echarts": "^5.4.1",
     "localforage": "^1.10.0",
     "next": "13.0.6",
+    "next-api-decorators": "^2.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-vant": "3.1.1",
@@ -31,13 +32,16 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.20.5",
+    "@babel/core": "^7.20.7",
+    "@babel/plugin-proposal-decorators": "^7.20.7",
     "@babel/preset-react": "^7.18.6",
     "@types/react": "17.0.37",
     "@typescript-eslint/eslint-plugin": "^5.46.1",
     "@typescript-eslint/parser": "5.46.1",
     "autoprefixer": "^10.4.13",
     "babel-plugin-import": "1.13.3",
+    "babel-plugin-parameter-decorator": "^1.0.16",
+    "babel-plugin-transform-typescript-metadata": "^0.3.2",
     "eslint": "8.29.0",
     "eslint-config-next": "12.0.4",
     "eslint-config-prettier": "8.5.0",
